# discord-twitch

./: bot.py  discord-twitch.service  example.cfg  pyproject.toml  requirements.txt  update-discord-twitch.sh
src/discord_twitch/: bot.py
