[project]
name = "discord-twitch-bot"
description = "A Discord bot that sends notifications when Twitch streamers go live."
requires-python = ">=3.12"
authors = [{ name = "Phoenix591" }]
dynamic = ["version"]
dependencies = [
    "discord.py>=2.0.0",
    "twitchio>=3.0.0",
    "aiohttp>=3.7.4"
]
license = { file = "LICENSE" }
[project.scripts]
discord-twitch = "discord_twitch.bot:main"

[build-system]
requires = ["setuptools>=61.0", "setuptools_scm>=8.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
